--- a/Clases ejemplo/readme
+++ b/Clases ejemplo/readme
@@ -1,2 +1,3 @@
+Descargar carpeta.
 Para ejecutar, clic en index, se abrirá en el navegador predeterminado (Chrome en este caso) y clic derecho > Inspeccionar > Consola.
 Ahí estará impreso el ejemplo.
